[gd_scene load_steps=2 format=3 uid="uid://clts5rhkahb3e"]

[ext_resource type="Script" uid="uid://cgolcxvfyanwj" path="res://addons/brennys-game-manager/level/abstract_level.gd" id="1_kfp8c"]

[node name="Level" type="Node2D"]
script = ExtResource("1_kfp8c")

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
